--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,3 +7,15 @@
 
     </div>
 </div>
+<div class="row">
+    <div class="col s2"></div>
+    <div class="col s8 left-align">
+        {{#each article}}
+        <div class="card-panel">
+            <h4> {{this.title}} </h4>
+            <a href="/readarticle/{{this._id}}" class="waves-effect waves-light btn" id="btnSignUp">Read Articles</a>
+        </div>
+        {{/each}}
+    </div>
+
+</div>
