--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,14 +16,15 @@
 </head>
 
 <body>
-    {{nav/navbar}}
+    {{> nav/navbar}}
+
     <main>
-        <div class="Container">
+        <div class="container">
             {{{ body }}}
         </div>
     </main>
 
-    {{footer}}
+    {{> footer}}
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
