--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -1,8 +1,9 @@
 <nav>
     <div class="nav-wrapper topnav">
         <a href="/" class="brand-logo center">Scraper News Network</a>
-        <ul class="right" id="nav-mobil">
+        <ul class="right" id="nav-mobile">
             <li><a href="/scrape">Scrape</a></li>
+            <li><a href="/clearall">Clear Articles</a></li>
             <li><a href="https://github.com/jldueyusa/scraper.git" target="_blank">Git Repo</a></li>
         </ul>
     </div>
