--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col s2"></div>
     <form action="/comment/{{article._id}}" method="POST" class="card-panel col s8">
-        <h5>Comment on this Article</h5>
+        <h5>Make a Comment</h5>
         <div class="row">
             <div class="input-field">
                 <i class="material-icons prefix">perm_identity</i>
