--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper topnav">
-        <a href="/" class="brand-logo center">Scraper News Network</a>
+        <a href="/" class="brand-logo center">Scraped News Right Here</a>
         <ul class="right" id="nav-mobile">
             <li><a href="/scrape">Scrape</a></li>
             <li><a href="/clearall">Clear Articles</a></li>
