--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -4,7 +4,7 @@
         <ul class="right" id="nav-mobile">
             <li><a href="/scrape">Scrape</a></li>
             <li><a href="/clearall">Clear Articles</a></li>
-            <li><a href="https://github.com/Dcoxmen/scraper" target="_blank">Git Repo</a></li>
+            <li><a href="https://github.com/jldueyusa/scraper/" target="_blank">Git Repo</a></li>
         </ul>
     </div>
 </nav>
